--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <section id="visi" class="quote">
     <p>
-        "Sebaik-baik manusia adalah yang paling bermanfaat bagi manusia lain"
+        "Sebaik-baik manusia adalah yang paling bermanfaat bagi manusia lain."
         <br>— HR. Ahmad
     </p>
 </section>
